# clawjournal

./: ARCHITECTURE.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
clawjournal/: cli.py  cli_security.py  findings.py  paths.py
clawjournal/capture/: __init__.py  changes.py  cursors.py  discovery.py
clawjournal/events/: __init__.py  types.py  view.py
clawjournal/events/cost/: __init__.py  anomalies.py  ingest.py  pricing.py  schema.py  types.py
clawjournal/events/cost/extract/: __init__.py  claude.py  codex.py
clawjournal/parsing/: parser.py  widened.py
clawjournal/prompts/agents/scoring/: rubric.md
clawjournal/redaction/: anonymizer.py  pii.py  secrets.py
clawjournal/scoring/: insights.py  scoring.py
clawjournal/workbench/: daemon.py  findings_pipeline.py  index.py  trace_note.py
tests/: test_cli.py  test_cli_security.py  test_findings_substrate.py
tests/capture/: test_changes.py  test_cursors.py  test_discovery.py
tests/events/: test_view.py
tests/events/cost/: test_extract.py  test_ingest.py  test_pricing.py
tests/parsing/: test_parser.py
tests/redaction/: test_secrets_findings.py  test_widened_message_model.py
tests/workbench/: _trace_note_helpers.py  test_daemon.py  test_daemon_security_api.py  test_findings_pipeline.py  test_highlights.py  test_index.py  test_security_migration.py  test_share_gates.py  test_synthetic_filter.py  test_trace_note_extract_notes.py  test_trace_note_refresh.py  test_trace_note_render.py  test_trace_note_score_creation.py  test_trace_note_sync.py  test_widened_message_migration.py
(+13 files in other folders)
